--- a/src/main.css
+++ b/src/main.css
@@ -11,11 +11,15 @@
   /* Neutral */
   --pri-dark: hsl(212, 24%, 26%);
   --pri-greyed: hsl(211, 10%, 45%);
+  --less-light: hsl(223, 19%, 88%);
   --light: hsl(223, 19%, 93%);
   --lighter: hsl(228, 33%, 97%);
   --white: hsl(0, 0%, 100%);
 
   font-size: 16px;
+}
+
+* {
   font-family: 'Rubik', sans-serif;
 }
 
